static/css/content.css
/**** containers ****/

.container {
    margin-left: auto;
    margin-right: auto;
    padding: 0 100px;
    width: 868px;
}

#article-container  {
    align-content: flex-start;
    align-items: baseline;
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-start;
    line-height: 22pt;
}

/****** header ******/

h1.article-title {
    font-size: 3em;
    margin: 0;
}

.article-subtitle {
    color: #575757;
    font-weight: 500;
}

.article-title-box {
    align-items: center;
    background-color: #ededed;
    display: flex;
    flex-direction: column;
    height: 15em;
    justify-content: center;
    margin-bottom: 4em;
    text-align: center;
}

a.code-stub-button {
    background-color: var(--secondary-color);
    border-radius: 6px;
    color: white;
    display: inline-block;
    font-weight: 600;
    line-height: 28px;
    padding: 0.5em 0.8em;
    text-align: center;
    text-decoration: none;
}

/******* text *******/

.content :is(h1, h2, h3, h4, h5, h6) {
    padding-top: 25px;
}

.home-title-box {
    background-color: var(--primary-color);
    color: whitesmoke;
    padding: 2em 0;
    text-align: center;
}

.article-list {
    display: flex;
    flex-direction: column;
    align-items: center;

    margin-left: auto;
    margin-right: auto;
    padding: 0 1em;

    list-style-type: none;
    max-width: 690px;
}

.article-item {
    display: block;
    width: calc(100% - 3em);
    margin: 0.5em 0;
    padding: 1em;

    border-radius: 30px;
    color: white;
    cursor: pointer;

    text-align: center;
    text-shadow: 1px 3px var(--text-color);

    --item-color: gray;
    --item-pos: 10px;

    background: var(--item-color);
    transform: translateX(var(--item-pos));
}

#article-container img {
    cursor: pointer;
}

.article-item h2 {
    font-size: 1.2em;
    margin: 0;
}

.article-item a {
    color: inherit;
    display: block;
    padding: 0;
    text-decoration: none;
}

/** go-back button **/
#go-back-button {
    background-color: var(--primary-color);
    border-radius: 50pt;
    color: white;
    display: block;
    margin: 5em auto;
    padding: 10pt 15pt;
    width: fit-content;
    text-decoration: none;
    font-variant: small-caps;
}

/**** tags ****/

.article-tagged-item h2 { 
    display: inline-block;
    padding: 0 0.8em 0;
}

.tag-list {
    list-style: none;
    display: flex;
    justify-content: center;
    padding-left: 10px;
    margin-top: 0.6em;
}

.tag-item {
    border: 3px solid;
    border-radius: 50px;

    background-color: color-mix(in srgb, var(--item-color) 30%, var(--primary-color));
    border-color: color-mix(in srgb, var(--item-color) 10%, var(--primary-color));
    font-size: 0.6em;
    text-shadow: none;

    list-style: none;

    padding: 0.4em 1em;
    margin: 0 0.5em;
}

/**** responsive ****/

@media screen and (max-width: 1500px) {
    #article-container {
        display: block;
    }

    .container {
        padding: 0;
    }
}

@media screen and (max-width: 900px) {
    .container {
        padding: 0 10px;
        width: 90%;
    }
}

